# framed_pipe

./: Cargo.toml  README.md
benches/: send_recv.rs
src/: lib.rs
